@@ -53,4 +53,32 @@ require_ok $pkg;
 
 }
 
+# text is enclosed within element strong
+{
+
+    my $importer;
+
+    lives_ok(sub {
+
+        $importer = $pkg->new( file => File::Spec->catfile("t","html","strong.html") );
+
+    },"importer created");
+
+    my $r = $importer->next();
+
+    is_deeply($r, {
+        h => 32,
+        page => 1,
+        page_h => 3820,
+        page_w => 2737,
+        page_x => 0,
+        page_y => 0,
+        text => "stormsoldaten onzen schoenen strijdzang zingen, en nog",
+        w => 738,
+        x => 209,
+        y => 292
+    }, "strong.html: record 1 ok");
+
+}
+
 done_testing 5;
