@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - text enclosed with tags like <i> or <strong> were skipped
 
 0.01  2018-09-25 11:31:44 CEST
   - add Catmandu::Importer::HOCR
